fix bugs with gaps and containers width

--- a/SmartFlavor/src/components/profile-container/ProfileContainer.css
+++ b/SmartFlavor/src/components/profile-container/ProfileContainer.css
@@ -9,30 +9,35 @@
 .profile-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
     height: 100%;
+    width: 100%;
     padding: 20px 20px;
     gap: 10px;
 }
 
 .profile-left-container {
     display: flex;
-    flex-direction: column;
-    gap: 5px;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
+    gap: 5px;
+}
+
+.button-cotainer {
+    display: flex;
+    align-items: flex-start;
 }
 
 .profile-option {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
+    --padding-end: 0px;
+    --padding-start: 0px;
+    color: #FFFF;
     gap: 10px;
 }
 
 .public-info {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     gap: 10px;
 }
 
@@ -41,14 +46,13 @@
     flex-direction: column;
     font-size: 15px;
     font-weight: 700;
-    width: 50%;
     gap: 5px;
 }
 
 .indicator-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
